# AkynAI

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: cpt.yaml  dpo.yaml  sft.yaml
eval_prompts/: prompts.jsonl
scripts/: backgen.sh  build_corpus.py  check_kyrgyz_letters.py  clean.sh  evaluate.sh  fetch_general_ky.py  generate.sh  ingest.sh  probe.sh  scrape_kyrgyz_audio.py  scrape_manas.py  scrape_texti_pesen.py  scrape_vostoka.py  train.sh
src/kyrpoet/: jsonl.py  tokenizer_probe.py
src/kyrpoet/data/: backgen.py  build_datasets.py  clean.py  ingest.py
src/kyrpoet/eval/: evaluate.py
src/kyrpoet/generate/: generate.py  rejection_sample.py
src/kyrpoet/llm/: backend.py
src/kyrpoet/prosody/: __init__.py  alliteration.py  rhyme.py  scorer.py  syllables.py  vowels.py
src/kyrpoet/train/: common.py  cpt.py  dpo.py  sft.py
tests/: test_alliteration.py  test_backgen.py  test_data.py  test_eval.py  test_generate.py  test_rhyme.py  test_scorer.py  test_syllables.py  test_train_config.py
